--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,15 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <link rel="shortcut icon"  href="http://topgeek.org/favicon.ico"></link>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" type="text/javascript"></script>
-<script src="/javascripts/site.js" type="text/javascript"></script>
+<script type="text/javascript">
+	$(document).ready(function(){  
+	    $(".menu_li").mouseover(function(){
+	        $(this).addClass('hover');
+	    }).mouseout(function(){
+	        $(this).removeClass('hover');
+	    });
+	});
+</script>
 <link href='http://fonts.googleapis.com/css?family=IM+Fell+DW+Pica' rel='stylesheet' type='text/css' />
 <link type="text/css" rel="stylesheet" href="/stylesheets/all.css" me
     dia="screen, projection" />
@@ -32,10 +40,10 @@
                     <span><a href="http://topgeek.org">博客</a></span>
                 </li>
                 <li class="menu_li">
-                    <span><a href="http://t.sina.com.cn/1819621437">微薄</a></span>
+                    <span><a href="/weibo">微博</a></span>
                 </li>
 				<li class="menu_li">
-                    <span><a href="/">关于我们</a></span>
+                    <span><a href="/about">关于我们</a></span>
                 </li>
             </ul>
         </div>
@@ -44,36 +52,13 @@
     <div class="wapper clearfix">
 	<%= yield %>
     </div>
-	<div class="footer">
-	    <div class="wapper clearfix">
-	<dl>
-	    <dt>关于团队</dt>
-	        <dd><a href="#">关于我们</a></dd>
 
-	        <dd><a href="http://topgeek.org/" target="_blank">团队博客</a></dd>
-	</dl>
-	<dl>
-	    <dt>协议/常见问题</dt>
-	        <dd><a href="#" >免责声明</a></dd>
-	        <dd><a href="#">隐私声明</a></dd>
-	        <dd><a href="#">常见问题</a></dd>
-	</dl>
-
-	<dl>
-	    <dt>获得更新</dt>
-	        <dd><a href="http://t.sina.com.cn/topgeek" target="_blank">新浪微博</a></dd>
-	        <dd><a href="http://t.qq.com/topgeek" target="_blank">腾讯微博</a></dd>
-	</dl>
-	<dl>
-
-	    <dt>支持我们</dt>
-	        <dd><a href="#">赞助我们</a></dd>
-	        <dd><a href="#">分享话题</a></dd>
-	</dl>
-
-	  <div class="copyright">©2010 TOPGEEK#01010101#</div>
-
+	<div id="footer">
+	  <div class="wapper">
+	  <span>
+	    &copy; 2010 topgeek, all rights reserved
+	  </span>
 	  </div>
 	</div>
-</body>
+	</body>
 </html>
